<resources>
    <string name="app_name">Listler</string>
    <string name="store">Store</string>
    <string name="list">List</string>
    <string name="confirm">Confirm</string>
    <string name="misc">Miscellaneous</string>

    <!-- TITLES -->
    <string name="title_new_list">New list</string>
    <string name="title_new_store">New store</string>
    <string name="title_finished_items">Finished</string>
    <string name="title_settings">Settings</string>
    <string name="title_lists">Lists</string>
    <string name="title_stores">Stores</string>
    <string name="title_history">History</string>
    <string name="title_new_item">New item</string>
    <string name="title_edit_item">Edit item</string>
    <string name="store_management">Store management</string>
    <string name="category_management">Category management</string>
    <string name="list_settings">List settings</string>

    <!-- BUTTON TEXTS -->
    <string name="btn_save">Save</string>
    <string name="btn_add">Add</string>
    <string name="btn_add_store">Add store</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add_item">Add item</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_add_category">Add category</string>
    <string name="btn_add_list">Add list</string>

    <!-- DESCRIPTIONS -->
    <string name="desc_new_list">Create a new list</string>
    <string name="desc_new_store">Create a new store</string>

    <!--
    -->
    <string name="medicine_list">Medicine list</string>
    <string name="shopping_list">Shopping list</string>

    <!-- INFORMATION -->
    <string name="i_c_item_in_list">%1$s is already in this list.</string>
    <string name="i_empty_input">%1$s name can not be blank.</string>
    <string name="i_item_in_list">Item is already in this list.</string>
    <string name="i_item_input_empty">Item name can not be blank.</string>
    <string name="i_category_in_db">%1$s is in database.</string>
    <string name="i_category_input_empty">Category name can not be blank.</string>
    <string name="i_list_name_empty">List name can not be blank.</string>

    <string name="confirm_deletion">Are you sure you want to delete %1$s?</string>

    <!-- ERRORS -->
    <string name="e_unknown_viewmodel_class">Unknown viewmodel class</string>
    <string name="e_item_does_not_exist">Item doesn\'t exist</string>

    <!-- HINTS -->
    <string name="hint_item_name">Item name</string>
    <string name="hint_add_item">Add item</string>
    <string name="hint_name_list">Name the list</string>
    <string name="hint_add_category">Add category</string>
    <string name="hint_category_name">Category name</string>
    <string name="hint_store_name">Store name</string>


    <string name="completed_items">Completed items</string>

    <!-- SETTINGS -->
    <string name="settings_title">Settings</string>
    <string name="completed_item_time_limit_summary">Sets time limit before item is hidden from completed list</string>
    <string name="completed_item_time_limit_title">Completed item time limit</string>
    <string name="is_home_screen_title">Use this list as home screen</string>
    <string name="is_home_screen_summary">Sets this list as home screen</string>
    <string name="store_sort_order_title">Sort order</string>
    <string name="store_sort_order_summary">Select store to sort list by</string>

    <!-- SETTINGS KEYS -->
    <string name="key_completed_item_time_limit">completed_item_time_limit</string>
    <string name="key_home_screen">is_home_screen</string>
    <string name="key_store_sort_order">store_sort_order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>